# ipou

./: .gitignore  ;w  AGENTS.md  Cargo.toml  PRD.md  PROTOCOL.md  README.md  Vagrantfile  config.yaml  config.yaml.bak  config_old.yaml  example_config.yaml  notes.md  private  public  run.sh
src/: error.rs  ipou.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  types.rs
src/crypto/: keys.rs  mod.rs
src/events/: mod.rs
src/net/: mod.rs  tasks.rs
src/network/: mod.rs  packet.rs  tun.rs  udp.rs
src/proto/: mod.rs  state.rs
src/protocol/: discovery.rs  handshake.rs  keepalive.rs  mod.rs  punch.rs  state_machine.rs
src/state/: mod.rs
src/tasks/: mod.rs
