[package]
name = "ipou"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = {version = "1.46.1", features = ["full"]}
tun = { version = "0.8", features = ["async"] }
x25519-dalek = { version = "2.0.1", features = [
  "getrandom",
    "reusable_secrets",
    "static_secrets",
] }
base64 = "0.13.1"
serde = "1.0"
serde_yml = "0.0.12"
