[package]
name = "trustun"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = {version = "1.37.0", features = ["full"]}
tun = { version = "0.5.5", features = ["async"] }
x25519-dalek = { version = "2.0.0-rc.3", features = [
    "reusable_secrets",
    "static_secrets",
] }
base64 = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
thiserror = "1.0.58"
bincode = "1.3.3"
futures = "0.3.30"